include(path_planningTaskLib)
ADD_LIBRARY(${PATH_PLANNING_TASKLIB_NAME} SHARED 
    ${PATH_PLANNING_TASKLIB_SOURCES})
add_dependencies(${PATH_PLANNING_TASKLIB_NAME}
    regen-typekit)

TARGET_LINK_LIBRARIES(${PATH_PLANNING_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${PATH_PLANNING_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${PATH_PLANNING_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${PATH_PLANNING_TASKLIB_INTERFACE_LIBRARIES}")
SET_TARGET_PROPERTIES(${PATH_PLANNING_TASKLIB_NAME}
    PROPERTIES INTERFACE_LINK_LIBRARIES "${PATH_PLANNING_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${PATH_PLANNING_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${PATH_PLANNING_TASKLIB_HEADERS}
    DESTINATION include/orocos/path_planning)
